Implement Historic processing strategy and update schema change logging